fix: [FFM-1646]: fix for create flag buttons overflowing on safari (#6116)

--- a/src/modules/75-cf/components/CreateFlagDialog/FlagDialog.module.scss
+++ b/src/modules/75-cf/components/CreateFlagDialog/FlagDialog.module.scss
@@ -29,7 +29,7 @@
   }
 
   [class*='StepWizard'] > div[class*='stepDetails'] {
-    min-height: 600px;
+    height: 650px;
   }
 }
 
